# omen-linux

./: .gitignore  .hp-wmi..swp  README.md  hp-wmi.c
application/: .gitignore  CMakeLists.txt  LICENSE
application/include/: OmenModule.h
application/src/: MainWindow.cpp  MainWindow.h  OmenModule.cpp  OmenModules.h  main.cpp
application/src/modules/FourZoneKbLight/: ColorLineEditControl.cpp  ColorLineEditControl.h  FourZoneKbLight.cpp  FourZoneKbLight.h  FourZoneKbLightDriver.cpp  FourZoneKbLightDriver.h  FourZoneKbLightInternal.cpp  FourZoneKbLightInternal.h  FourZoneKbLightModule.cpp  FourZoneKbLightModule.h  FourZoneKbLightWidget.cpp  FourZoneKbLightWidget.h  FourZoneModuleInstance.cpp  FourZoneModuleInstance.h
application/src/modules/MacrosModule/: KeyInfo.h  MacroRecordDialog.cpp  MacroRecordDialog.h  MacrosModule.cpp  MacrosModule.h  MacrosWidget.cpp  MacrosWidget.h  OMacrosModuleInstance.cpp  OMacrosModuleInstance.h
driver/: Makefile  hp-wmi.c
sound-driver/: HiFi.conf  Makefile  dkms.conf  patch_realtek.c
